--- a/public/index.html
+++ b/public/index.html
@@ -108,34 +108,48 @@
 						</div>
 						<div class="col-auto">
 							<select class="custom-select sources" name="sources" placeholder="Все способы">
-								<option value="Relevance">Все способы</option>
-								<option value="new">Банковские крты</option>
-								<option value="popular">Эл. кошельки</option>
-								<option value="priceHigh">Системы переводов</option>
-								<option value="priceLow">Другое</option>
+								<option value="all">Все способы</option>
+								<option value="card">Банковские крты</option>
+								<option value="pocket">Эл. кошельки</option>
+								<option value="transfer">Системы переводов</option>
+								<option value="other">Другое</option>
 							</select>
 						</div>
 					</div>
 					<div class="s-payment-method__main-row row">
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
 						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
+						</div>
+						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
 						</div>
 					</div>
 				</div>
