second page - done

--- a/public/02-payment-page.html
+++ b/public/02-payment-page.html
@@ -98,63 +98,97 @@
 				</div>
 			</div>
 			<!-- end header-block-->
-			<!-- start s-payment-method-->
-			<section class="s-payment-method section" id="s-payment-method">
+			<!-- start s-payment-order-->
+			<section class="s-payment-order section" id="s-payment-order">
 				<div class="container">
-					<div class="s-payment-method__head-row row">
-						<div class="col">
-							<h2 class="s-payment-method__title">Способы оплаты
+					<div class="s-payment-order__head-row row">
+						<div class="col-md-auto">
+							<h2 class="s-payment-order__title">Оплата через Яндекс.Деньги
 							</h2>
 						</div>
-						<div class="col-auto">
-							<select class="custom-select sources" name="sources" placeholder="Все способы">
-								<option value="all">Все способы</option>
-								<option value="card">Банковские крты</option>
-								<option value="pocket">Эл. кошельки</option>
-								<option value="transfer">Системы переводов</option>
-								<option value="other">Другое</option>
-							</select>
+						<div class="col">
+							<div class="s-payment-order__payment-wrap">
+								<div class="s-payment-order__payment-trigger"><img class="res-i" src="img/@2x/payment-i.png" alt=""/>Яндекс.Деньги
+								</div>
+								<div class="s-payment-order__payment-toggle">
+									<div class="s-payment-order__order-row row">
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+										<div class="s-payment-order__order-col col-sm-3 col-4 col-md-4 col-lg-3">
+											<button class="s-payment-order__order-item btn" type="button"><img class="res-i" src="img/@2x/order-i.jpg" alt=""/>
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="s-payment-method__main-row row">
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="transfer"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Денежный перевод</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="pocket"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">QIWI Кошелек</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="card"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Банковская карта</span></a>
-						</div>
-						<div class="s-payment-method__col col-md-3 col-sm-4 col-6" data-value="other"><a class="s-payment-method__item" href="#"><span class="s-payment-method__item-img-wrap"><img class="res-i" src="img/@2x/payment-item.png" alt=""/></span><span class="s-payment-method__item-title">Любой другой вариант</span></a>
+					<div class="s-payment-order__main-row row">
+						<div class="col-md-5 col-lg-4">
+							<div class="form-wrap">
+								<form>
+									<input type="hidden" name="example-input-field"/>
+									<input class="order" type="hidden" name="order" value="Заявка  с сайта"/>
+									<input class="utm_source" type="hidden" name="utm_source"/>
+									<input class="utm_term" type="hidden" name="utm_term"/>
+									<input class="utm_medium" type="hidden" name="utm_medium"/>
+									<input class="utm_campaign" type="hidden" name="utm_campaign"/>
+									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" type="text" placeholder="Номер кошелька" name="card" required="required"/>
+									</div>
+									<!-- +e.input-wrap-->
+									<button class="form-wrap__btn btn btn-light-2" type="submit">Оплатить 1020,38 ₽
+									</button>
+									<div class="form-wrap__polite">Нажимая кнопку оплатить, вы соглашаетесь с <a href="#">публичным соглашением </a>и <a href="#">довогором офферты</a>
+									</div>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- end s-payment-method-->
+			<!-- end s-payment-order-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="footer__main-row row">
