--- a/public/02-payment-page.html
+++ b/public/02-payment-page.html
@@ -109,7 +109,8 @@
 						<div class="col">
 							<div class="s-payment-order__payment-wrap">
 								<div class="s-payment-order__payment-trigger"><img class="res-i" src="img/@2x/payment-i.png" alt=""/>
-									<div>Яндекс.Деньги</div>
+									<div class="s-payment-order__payment-title">Яндекс.Деньги
+									</div>
 								</div>
 								<div class="s-payment-order__payment-toggle">
 									<div class="s-payment-order__order-row row">
